<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.strategicsoft.ditocenso.Activity.ActConfiguracion">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/configuracion"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hideurl"
            android:inputType="textWebEditText"
            android:text="@string/urlinicial"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            android:textSize="17sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            android:id="@+id/txtUrlBase"
            app:met_primaryColor="@color/color_4"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tiempoenvio"
            android:inputType="number"
            android:text=""
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            android:textSize="17sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            android:maxLength="2"
            android:id="@+id/txtInterval"
            app:met_primaryColor="@color/color_4"
            app:met_singleLineEllipsis="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_principal"
            android:text="@string/textoGuardar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</RelativeLayout>
